# jukebox

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SCREENSHOTS.md  TODO.md  flake.nix  justfile  main.py  pyproject.toml  treefmt.lint.toml  treefmt.toml
.agent/: session-2026-07-06.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: static_analysis.yaml
branding/: LICENSE
branding/project_files/: jukebox_branding.fig
frontend/: .cta.json  README.md  components.json  example.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  vite.config.ts
frontend/public/: themes.json
frontend/src/: router.tsx  styles.css
output/: themes.json
output/ghostty/: bathory-hammerheart.conf  burzum-filosofem.conf  dark-funeral-the-secrets-of-the-black-arts.conf  darkthrone-transilvanian-hunger.conf  emperor-in-the-nightside-eclipse.conf  gorgoroth-twilight-of-the-idols.conf  immortal-at-the-heart-of-winter.conf  impaled-nazarene-ugra-karma.conf  joji-piss-in-the-wind.conf  khold-phantom.conf  marduk-panzer-division.conf  mayhem-dawn-of-the-black-hearts.conf  mayhem-deathcrush.conf  nile-black-seeds-of-vengence.conf  pallbearer-forgotten-days.conf  taake-doedskvad.conf  thyrfing-valdr-galga.conf  venom-welcome-to-hell.conf  windir-1184.conf
output/tinted-theming/: bathory-hammerheart.yaml  burzum-filosofem.yaml  dark-funeral-the-secrets-of-the-black-arts.yaml  darkthrone-transilvanian-hunger.yaml  emperor-in-the-nightside-eclipse.yaml  (+14 more)
schemas/: theme.json
src/: screenshots.py
tests/: test_screenshots.py
(+54 files in other folders)
